Update general info

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Worshop Introductorio a Computación Cientifica con Python - UniAndes"
+title: "Introducción a la Computación Cientifica con Python"
 
 
 #------------------------------------------------------------
