--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Introducción a la Computación Cientifica con Python - Workshop"
+title: "Introducción a la Computación Científica con Python - Workshop"
 
 
 #------------------------------------------------------------
